Added items' dates as placeholders in all edit date inputs for clarity

--- a/src/app/components/admin/admin-home-page/admin-home-page.component.html
+++ b/src/app/components/admin/admin-home-page/admin-home-page.component.html
@@ -736,6 +736,7 @@
                                        [bsConfig]="bsConfig"
                                        placement="top"
                                        [(ngModel)]="date"
+                                       [value]="date.toDate() | date:'medium'"
                                        formControlName="date">
                                 <br>
                                 <br>
