--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -153,6 +153,7 @@
                                                [bsConfig]="bsConfig"
                                                placement="bottom"
                                                [class.invalid]="!f.date.valid && f.date.touched"
+                                               [value]="date | date:'medium'"
                                                formControlName="date">
                                     </div>
                                     <p class="help-block alert alert-warning text-center mt-1"
