--- a/src/app/components/admin/admin-press-release/admin-press-release-edit/admin-press-release-edit.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-edit/admin-press-release-edit.component.html
@@ -91,6 +91,7 @@
                                    bsDatepicker
                                    [bsConfig]="bsConfig"
                                    placement="top"
+                                   [value]="publishOn | date:'medium'"
                                    formControlName="publishOn">
                         </div>
                         <p class="help-block alert alert-warning text-center mt-1"
@@ -126,17 +127,18 @@
                         </div>
                     </div>
 
-                    <div class="btn-group float-right" role="group" aria-label="Basic example">
+
+                    <button type="submit"
+                            class="btn btn-secondary mb-4 full-width">
+                        <i class="fa fa-bullhorn"></i>&nbsp;Update
+                    </button>
+
+                    <div class="btn-group float-right mb-3" role="group" aria-label="Basic example">
                         <a class="btn btn-warning btn-sm"
                            [routerLink]="['/admin/press-releases']">
                             <i class="fa fa-undo"></i>&nbsp;Cancel
                         </a>
                     </div>
-
-                    <button type="submit"
-                            class="btn btn-primary btn-sm mb-5">
-                        <i class="fa fa-bullhorn"></i>&nbsp;Update
-                    </button>
 
                     <!--* Debugging * -->
                     <!--<code>-->
