--- a/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
@@ -4,9 +4,9 @@
         <div class="card">
             <div class="card-body">
                 <h1 class="text-center pb-4 pt-3 admin-badge">
-               <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
-                    alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
-                        <i class="fa fa-calendar"></i>&nbsp;Admin
+                    <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
+                         alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
+                    <i class="fa fa-calendar"></i>&nbsp;Admin
                     Edit Calendar
                 </h1>
             </div>
@@ -105,6 +105,7 @@
                                            bsDatepicker
                                            placement="top"
                                            formControlName="date1"
+                                           [value]="date1.toDate() | date"
                                            [bsConfig]="bsConfig">
                                 </div>
                             </div>
@@ -138,7 +139,7 @@
                             </mat-expansion-panel-header>
 
                             <div class="form-group">
-                                <div class="form-group">
+                                <div class="input-group">
                                     <div class="input-group-prepend">
                                         <div class="input-group-text">
                                             <i class="fa fa-calendar-alt"></i>
@@ -149,6 +150,7 @@
                                            bsDatepicker
                                            placement="top"
                                            formControlName="date2"
+                                           [value]="date2.toDate() | date"
                                            [bsConfig]="bsConfig">
                                 </div>
                             </div>
@@ -182,7 +184,7 @@
                             </mat-expansion-panel-header>
 
                             <div class="form-group">
-                                <div class="form-group">
+                                <div class="input-group">
                                     <div class="input-group-prepend">
                                         <div class="input-group-text">
                                             <i class="fa fa-calendar-alt"></i>
@@ -193,6 +195,7 @@
                                            bsDatepicker
                                            placement="top"
                                            formControlName="date3"
+                                           [value]="date3.toDate() | date"
                                            [bsConfig]="bsConfig">
                                 </div>
                             </div>
@@ -226,7 +229,7 @@
                             </mat-expansion-panel-header>
 
                             <div class="form-group">
-                                <div class="form-group">
+                                <div class="input-group">
                                     <div class="input-group-prepend">
                                         <div class="input-group-text">
                                             <i class="fa fa-calendar-alt"></i>
@@ -237,6 +240,7 @@
                                            bsDatepicker
                                            placement="top"
                                            formControlName="date4"
+                                           [value]="date4.toDate() | date"
                                            [bsConfig]="bsConfig">
                                 </div>
                             </div>
