--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.css
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.css
@@ -5,7 +5,7 @@ h1, h2, h3, h4, h5, h6, p, div, tr, th, tr, td, ul, ol, li {
 
 .card, .card-body, .card-text, .card-footer {
     font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
-    line-height: 1.7;
+    line-height: 1.8em;
     font-size: 1em;
     border-radius: 0;
 }
