--- a/src/app/components/admin/admin-press-release/admin-press-release-new/admin-press-release-new.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-new/admin-press-release-new.component.html
@@ -132,17 +132,18 @@
                         </div>
                     </div>
 
-                    <div class="btn-group float-right" role="group" aria-label="Basic example">
+
+                    <button type="submit"
+                            class="btn btn-secondary mb-4 full-width">
+                        <i class="fa fa-bullhorn"></i>&nbsp;Create
+                    </button>
+
+                    <div class="btn-group float-right mb-3" role="group" aria-label="Basic example">
                         <a class="btn btn-warning btn-sm"
                            [routerLink]="['/admin/press-releases']">
                             <i class="fa fa-undo"></i>&nbsp;Cancel
                         </a>
                     </div>
-
-                    <button type="submit"
-                            class="btn btn-primary btn-sm mb-5">
-                        <i class="fa fa-bullhorn"></i>&nbsp;Create
-                    </button>
 
                     <!--* Debugging * -->
                     <!--<code>-->
