--- a/src/app/components/admin/admin-user/admin-user-edit/admin-user-edit.component.html
+++ b/src/app/components/admin/admin-user/admin-user-edit/admin-user-edit.component.html
@@ -138,7 +138,7 @@
 
                         <button type="submit"
                                 [disabled]="!editUserForm.valid"
-                                class="btn btn-primary btn-sm mb-5"><i class="fa fa-user-check"></i>&nbsp;Save
+                                class="btn btn-secondary mb-5 full-width"><i class="fa fa-user-check"></i>&nbsp;Save
                         </button>
                         <div class="btn-group float-right" role="group" aria-label="Basic example">
                             <a class="btn btn-warning btn-sm"
