--- a/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
+++ b/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
@@ -84,7 +84,8 @@
 
                     <button type="submit"
                             [disabled]="!newUserForm.valid"
-                            class="btn btn-primary btn-sm mb-5"><i class="fa fa-user-plus"></i>&nbsp;Save
+                            class="btn btn-secondary mb-5 full-width">
+                        <i class="fa fa-user-plus"></i>&nbsp;Save
                     </button>
 
 
