--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.css
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.css
@@ -27,6 +27,10 @@ a.page-link {
     text-decoration: none;
 }
 
+button.btn.search {
+    border: 1px solid rgb(206, 212, 218);
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
     .card-columns {
