Updated Modal text

--- a/src/app/components/core/alert-modal/alert-modal.component.html
+++ b/src/app/components/core/alert-modal/alert-modal.component.html
@@ -7,7 +7,7 @@
 </div>
 <div class="modal-body">
     <p>
-        There are several not approved rogue registration and housing sites that are posting information for the 2019 meeting and are
+        There are several not approved registration and housing sites that are posting information for the 2019 meeting and are
         not
         affiliated with DDW. Attendee registration and housing open in January 2019. Official registration and housing
         information
