--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -297,6 +297,13 @@
         </a>
     </li>
 
+    <li class="sidenav-item" *ngIf="isLoggedIn">
+        <a [routerLink]="['/admin/modal']" class="sidenav-link">
+            <i class="sidenav-icon ion ion-md-quote"></i>
+            <div><i class="fal fa-window-alt"></i>&nbsp;<span class="helv">Homepage Modal</span></div>
+        </a>
+    </li>
+
     <li class="sidenav-item">
         <a class="sidenav-link" [routerLink]="['/']" target="_blank">
             <i class="sidenav-icon ion ion-md-quote"></i>
