--- a/src/app/components/core/alert-modal/alert-modal.component.html
+++ b/src/app/components/core/alert-modal/alert-modal.component.html
@@ -1,23 +1,31 @@
 <!-- * ALERT-MODAL * -->
 <div class="modal-header">
-    <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+    <button type="button"
+            class="close pull-right"
+            aria-label="Close"
+            (click)="bsModalRef.hide()">
         <span aria-hidden="true">&times;</span>
     </button>
-    <h5 class="modal-title"><i class="fa fa-exclamation-triangle"></i>&nbsp; Caution: Beware of Registration and Housing Scam Sites</h5>
+    <ng-template #loadingTitle>
+        <div class="text-center text-dark p-5">
+           ...
+        </div>
+    </ng-template>
+    <h5 class="modal-title" *ngIf="title; else loadingTitle">
+        <i class="fa fa-exclamation-triangle"></i>&nbsp; <span class="helv">{{ title }}</span>
+    </h5>
 </div>
-<div class="modal-body">
-    <p>
-        There are several not approved registration and housing sites that are posting information for the 2019 meeting and are
-        not
-        affiliated with DDW. Attendee registration and housing open in January 2019. Official registration and housing
-        information
-        will only come from a @ddw.org email address. If there are any questions about the authenticity of a company or
-        email, please contact <a href="mailto:administration@ddw.org">DDW Administration</a>. For information regarding
-        registration and hotel blocks, please <a href="http://ddw.org/register/registration" target="_blank">use
-        information
-        on our website only</a>.
-    </p>
+<ng-template #loadingBody>
+    <div class="text-center text-dark p-5">
+        ...
+    </div>
+</ng-template>
+<div class="modal-body" *ngIf="body; else loadingBody">
+    <div [innerHTML]="body | safeHtml"></div>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="bsModalRef.hide()">OK</button>
+    <button type="button"
+            class="btn btn-primary"
+            (click)="bsModalRef.hide()">{{ btnText || 'SEND' }}
+    </button>
 </div>
