--- a/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
+++ b/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
@@ -139,6 +139,12 @@
                                 <i class="fa fa-file-signature"></i>&nbsp;Edit Privacy Policy
                             </a>
                         </div>
+                        <div class="text-right m-2">
+                            <a [routerLink]="['/admin/modal']"
+                               class="btn btn-outline-dark borderless">
+                                <i class="fa fa-window-alt"></i>&nbsp;Edit Homepage Modal
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
