--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -85,7 +85,7 @@
                                 </div>
 
 
-                                <div class="form-group">
+                                <div class="form-group" *ngIf="!isExtURL">
                                     <label>Meta Descripton <br>
                                         <small>If blank meta will use site default (Not recommended)</small>
                                     </label>
@@ -118,7 +118,8 @@
                                            [class.invalid]="!f.extURL.valid && f.extURL.touched"
                                            placeholder="https://"
                                            formControlName="extURL">
-                                    <p class="help-block alert alert-warning text-center mt-1">
+                                    <p class="help-block alert alert-warning text-center mt-1"
+                                       *ngIf="!f.extURL.valid && f.extURL.touched">
                                         <b>External URL</b> is invalid!
                                     </p>
                                 </div>
@@ -184,7 +185,7 @@
                                     </p>
                                 </div>
 
-                                <div class="card bg-lighter mb-3">
+                                <div class="card bg-lighter mb-3" *ngIf="!isExtURL">
                                     <div class="card-body">
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox">
