--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -40,7 +40,7 @@
                                 </p>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group" *ngIf="!isExtURL">
                                 <label>Meta Descripton <br>
                                     <small>If blank, meta will use site default (Not recommended)</small>
                                 </label>
